--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -2,6 +2,8 @@
   background-color: rgba(0, 0, 0, 0.51);
   min-height: 100vh;
   width: 100%;  
+  display: flex;
+  flex-direction: column;
 }
 
 .App-logo {
