--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,6 +1,7 @@
 .App {
   background-color: rgba(0, 0, 0, 0.51);
-  min-height: 100vh;
+  height: 100vh;
+  min-height: 400px;
   width: 100%;  
   display: flex;
   flex-direction: column;
