--- a/src/styles/navigation.css
+++ b/src/styles/navigation.css
@@ -5,7 +5,7 @@
 }
 .navigation{
     color:white; 
-    display: flex;
+    /* display: flex; */
     flex-direction: column;
     align-items: stretch; 
     width: 100%;
