--- a/src/styles/Product.css
+++ b/src/styles/Product.css
@@ -6,7 +6,7 @@
     overflow: hidden;
     margin: 1rem;
 }
-    .product-price{
+    .product .product-price{
         width: auto;
         background-color: #0000009a;
         color: white;
@@ -15,12 +15,12 @@
         border-radius: 0.5rem;
         text-align: center;
     }
-    .product-content{
+    .product .product-content{
         height: 65%;
         display: flex;
         flex-direction: column;
     }
-        .product-title{
+        .product .product-title{
             height: 2rem;
             color: white;
             background-color: #0000009a;
@@ -30,7 +30,7 @@
             white-space: nowrap;
             text-overflow: ellipsis;            
         }
-        .product-description{
+        .product .product-description{
             flex: 1;
             padding: 0.5rem;
             overflow: auto;
