--- a/src/styles/Product.css
+++ b/src/styles/Product.css
@@ -5,6 +5,7 @@
     background-position: center;
     overflow: hidden;
     margin: 1rem;
+    cursor: pointer;
 }
     .product .product-price{
         width: auto;
@@ -12,7 +13,6 @@
         color: white;
         font-size: 1.2rem;
         padding: 0.1rem;
-        border-radius: 0.5rem;
         text-align: center;
     }
     .product .product-content{
