--- a/src/styles/ProductDescription.css
+++ b/src/styles/ProductDescription.css
@@ -15,16 +15,22 @@
         align-content: center;
         border-bottom: 1px solid transparent;
         cursor: pointer;
+        padding: 0.5rem;
+        transition: all 0.2s ease-in-out;
     }
     .product-description .upper > .desc-item:hover{
         color: #EB1717;
+        background-color: #4271e76b;
+        transform: scale(1.05);
     }
     .product-description .upper > .desc-item.checked{
         color: #EB1717;
-        border-bottom: 1px solid #EB1717;
+        background-color: #4271e7b9;
+        transform: scale(1.05);
     }
     .product-description .content{
         flex: 1;
         overflow: auto;
         padding: 1rem;
+        box-shadow: inset 0 0 1rem #00000023
     }
