--- a/src/styles/AuthForm.css
+++ b/src/styles/AuthForm.css
@@ -3,6 +3,8 @@
     background-color: white;
     padding: 1rem;
     min-width: 5rem;
+    display: flex;
+    flex-direction: column;
 }
     
     .auth-form .lower{
