--- a/src/styles/ProductDescription.css
+++ b/src/styles/ProductDescription.css
@@ -2,7 +2,7 @@
     flex: 1;
     display: flex;
     flex-direction: column;
-    background: transparent;
+    background-color: rgb(241, 241, 241);
     color: #3f3f3f
 }
     .product-description .upper{
@@ -32,5 +32,8 @@
         flex: 1;
         overflow: auto;
         padding: 1rem;
-        box-shadow: inset 0 0 1rem #00000023
+        box-shadow: inset 0 0 1rem #00000023;
+    }
+    .tab-content{
+        padding: 1rem;
     }
